--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,6 @@ python-multipart==0.0.6
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
-RandomWords==0.4.0
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.10
@@ -38,4 +37,4 @@ uvicorn==0.21.1
 watchfiles==0.19.0
 websockets==11.0.2
 requests==2.31.0
-aiomysql
+fastapi-users[sqlalchemy]
