--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,10 @@
     "@types/node": "^18.17.17",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue/tsconfig": "^0.4.0",
+    "autoprefixer": "^10.4.16",
     "npm-run-all2": "^6.0.6",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "typescript": "~5.2.0",
     "vite": "^4.4.9",
     "vue-tsc": "^1.8.11"
