--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "pinia": "^2.1.6",
+    "qs": "^6.11.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
