--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,10 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "axios": "^1.6.0",
     "pinia": "^2.1.6",
     "qs": "^6.11.2",
@@ -22,6 +26,7 @@
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.16",
+    "daisyui": "^3.9.4",
     "npm-run-all2": "^6.0.6",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
