--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.0",
     "pinia": "^2.1.6",
     "qs": "^6.11.2",
+    "timeago.js": "^4.0.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
