backend: fix packages import problems

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -3,6 +3,7 @@ name = "nogu-nekko"
 version = "0.1.0"
 description = "tournament practicing platform. In order to reduce the work in the progress of collecting data, sorting data and analyzing data."
 authors = ["Usagi no Niku <chenbohan911@163.com>"]
+packages = [{include = "nogu-nekko", from="src"}]
 license = "GPL-3.0"
 readme = "README.md"
 
