--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,6 +25,7 @@ orjson = "^3.10.3"
 sse-starlette = "^2.1.0"
 ossapi = {extras = ["async"], version = "^4.0.0"}
 sqlmodel = "^0.0.18"
+aiomysql = "^0.2.0"
 
 
 [build-system]
