--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,7 @@ sqlmodel = "^0.0.18"
 aiomysql = "^0.2.0"
 pytest = "^8.2.1"
 polyfactory = "^2.16.0"
+pytest-asyncio = "^0.23.7"
 
 
 [build-system]
