project: update launch.json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,28 @@
 {
     "configurations": [
         {
-            "command": "npm run dev",
             "name": "Run Frontend",
+            "command": "npm run dev",
             "request": "launch",
             "type": "node-terminal",
             "cwd": "${workspaceFolder}/frontend"
         },
         {
             "name": "Run Backend",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
-            "program": "${workspaceFolder}/backend/main.py",
+            "program": "${workspaceFolder}/backend/src/nogu/main.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "env": {
+                "PYDEVD_DISABLE_FILE_VALIDATION": "1"
+            }
+        },
+        {
+            "name": "Run Pytests",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/backend/tests/main.py",
             "console": "integratedTerminal",
             "justMyCode": true,
             "env": {
