--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -11,6 +11,7 @@
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
+    "noUncheckedIndexedAccess": true,
     "paths": {
       "@/*": [
         "./src/*"
