--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "@iconfu/svg-inject": "^1.2.3",
     "axios": "^1.6.0",
-    "openapi-fetch": "^0.9.7",
     "pinia": "^2.1.6",
     "qs": "^6.11.2",
     "timeago.js": "^4.0.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "x-data-spreadsheet": "^1.1.9"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
@@ -26,9 +26,10 @@
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.16",
-    "daisyui": "^3.9.4",
+    "daisyui": "^4.12.10",
     "npm-run-all2": "^6.0.6",
-    "openapi-typescript": "^6.7.6",
+    "openapi-fetch": "^0.10.2",
+    "openapi-typescript": "^7.0.4",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "~5.2.0",
